# super-memory

Pro1/: ChangeLog.md  Pro1.cabal
Pro1/src/: Dimensionable.hs  Domain.hs  DomainElement.hs  DomainHelper.hs  FuzzySet.hs  FuzzySetHelper.hs  Instances.hs  Main.hs  Utility.hs
Pro1/src/Domains/: CompositeDomain.hs  Dimensionable.hs  Domain.hs  DomainElement.hs  DomainHelper.hs  SimpleDomain.hs
Pro1/src/FuzzySets/: CalculatedFuzzySet.hs  FuzzySet.hs  FuzzySetHelper.hs  MutableFuzzySet.hs  Operations.hs
Pro1/src/Instances/: CalculatedFuzzySetInstances.hs  CompositeDomainInstances.hs  DomainElementInstances.hs  MutableFuzzySetInstances.hs  SimpleDomainInstances.hs
Pro2/: ChangeLog.md  LICENSE  Pro2.cabal
Pro2/src/: Main.hs  Utility.hs
Pro2/src/Relations/: Relation.hs  RelationHelper.hs
Pro3/: ChangeLog.md  Pro3.cabal
Pro3/simulator/: config.txt
Pro3/src/: Configuration.hs  Main.hs  Utility.hs
Pro3/src/Defuzzifiers/: COADefuzzifier.hs  Defuzzifier.hs
Pro3/src/FuzzySystems/: AccelFuzzySystemMin.hs  FuzzySystem.hs  FuzzySystemHelper.hs  RudderFuzzySystemMin.hs
Pro3/src/LinguisticVariables/: AccelLinguisticVariables.hs  AngleLinguisticVariables.hs  DistanceLinguisticVariables.hs  DistanceLingusticVariables.hs  LinguisticVariableHelper.hs  SpeedLinguisticVariables.hs
Pro3/src/Rules/: Rule.hs
Pro4/: ChangeLog.md  Pro4.cabal
Pro4/src/: Chromosome.hs  Configuration.hs  Evaluation.hs  GeneticAlgorithms.hs  Main.hs  Utility.hs
Pro5/: ChangeLog.md  Pro5.cabal  cabal.config
Pro5/data/: a5b5  a5b5c5d5e5
Pro5/src/: Bindings.hs  Cube.hs  Display.hs  Main.hs  NeuralNetworks.hs  NewModule.hs  Pages.hs  Process.hs  Test.hs  Utility.hs  Variables.hs
Pro6/: ChangeLog.md  Pro6.cabal
Pro6/report/: Fig.1.tex  data.mat  diagrams.m  report.blg  report.tex
Pro6/src/: ANFIS.hs  Layers.hs  Main.hs  Sample.hs  Utility.hs
Pro7/: ChangeLog.md  LICENSE  Pro7.cabal  train.errors  train.model  train.output  train_2_6_4_3.model  train_2_6_4_3.output  train_2_8_4_3.model  train_2_8_4_3.output
Pro7/report/: report.tex
Pro7/src/: Configuration.hs  Genetic.hs  Main.hs  NN.hs  Utility.hs
Pro7/src/Plots/: Main.hs  NN.hs  Utility.hs
