name:                Pro2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lovre MrÄela
maintainer:          lovre.mrcela@fer.hr
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Pro2
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, Pro1
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  GADTs, MultiWayIf
  ghc-options:         -Wall
