name:                Pro4
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lovre MrÄela
maintainer:          lovre.mrcela@fer.hr
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Pro4
    main-is:             Main.hs
    build-depends:       base >=4.9 && <4.10, MonadRandom >= 0.4 && < 0.5, random >=1.1 && <1.2,
                         vector >= 0.11 && <0.12
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  GADTs, MultiWayIf, NamedFieldPuns, RecordWildCards, StandaloneDeriving
    ghc-options:         -Wall
