name:                Pro6
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lovre MrÄela
maintainer:          lovre.mrcela@fer.hr
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Pro6
  main-is:             Main.hs
  default-extensions:  GADTs, RecordWildCards, NamedFieldPuns, StandaloneDeriving, MultiWayIf
  build-depends:       base == 4.9.*,
                       vector,
                       array,
                       tuple,
                       random-shuffle,
                       MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
